--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -35,7 +35,7 @@ http {
         listen       80 default_server;
         listen       [::]:80 default_server;
         server_name  _;
-        root         /usr/share/nginx/html;
+        root         /opt/alibaba-demo/webapp;
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
