--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -33,22 +33,14 @@ http {
 
     server {
         listen       80 default_server;
-        listen       [::]:80 default_server;
         server_name  _;
-        root         /opt/alibaba-demo/webapp;
 
         # Load configuration files for the default server block.
         include /etc/nginx/default.d/*.conf;
 
         location / {
-        }
-
-        error_page 404 /404.html;
-            location = /40x.html {
-        }
-
-        error_page 500 502 503 504 /50x.html;
-            location = /50x.html {
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_pass http://localhost:8081;
         }
     }
 }
