--- a/nodejs/package.json
+++ b/nodejs/package.json
@@ -13,7 +13,7 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node server.js",
+    "start": "pm2 start server.js",
     "watch": "nodemon server.js"
   },
   "author": "Muhammad Arif Wicaksana",
